@@ -17,6 +17,7 @@ Verilator 5.033 devel
 * Fix man pages what-is section (#5710). [Ahmed El-Mahmoudy]
 * Fix pattern assignment to real inside struct (#5713).
 * Fix %p format output for real inside struct (#5713).
+* Fix segfault when only enum value referenced in package (#5714). [Dan Katz]
 
 
 Verilator 5.032 2025-01-01
